--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+#expense {
+    margin: 0 auto;
+    width: 400px;
+    border: 3px solid black;
+    padding-bottom: 1em;
+    background-color: #f1ac60;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#heading h2 {
+    padding-left: 2em;
+    margin-right: 3em;
+    display: inline-flex;
+    justify-content: space-between;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#part1 h3 {
+    padding-left: 2em;
+    margin-right: 3em;
+    display: inline-flex;
+    justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+#part1 {
+    margin-top: 1em;
+    border: 2px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#part2 span {
+    padding-left: 2em;
+    margin-right: 5em;
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+#part2 {
+    margin-top: 1em;
+    border: 2px solid black;
+}
+
+#part3 input {
+    margin-left: 1em;
+    width: 90%;
+    height: 30px;
+}
+
+#part3 {
+    margin-top: 1em;
+    border: 2px solid black;
 }
